<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/graybold"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".feature.presentation.precardregister.PreCardRegisterFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

    <ImageView
        android:id="@+id/ivCard"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_card"
        android:layout_marginTop="158dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvPrimaryText"
        style="@style/title"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@id/ivCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_primary_text_pre_card_register"/>

    <TextView
        android:id="@+id/tvSubTitle"
        app:layout_constraintTop_toBottomOf="@id/tvPrimaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/title_secunday_text_pre_card_register"
        style="@style/subtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnegister"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:letterSpacing="0"
        android:fontFamily="@font/robotomedium"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_button_register_card"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>