<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.presentation.cardregister.CardRegisterFragment"
    android:background="@color/graybold"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitCenter"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        style="@style/title"
        android:text="@string/title_card_register"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCardNumber"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        app:boxBackgroundColor="@color/graybold"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieCardNumber"
            android:textColor="@color/white"
            android:paddingStart="0dp"
            android:inputType="phone"
            android:maxLength="19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Número do cartão"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCardHolderName"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        app:boxBackgroundColor="@color/graybold"
        app:layout_constraintTop_toBottomOf="@id/tilCardNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieCardHolderName"
            android:textColor="@color/white"
            android:maxLength="30"
            android:paddingStart="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cardholder_name"/>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tilCardHolderName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCardDueDate"
            android:layout_width="130dp"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            app:boxBackgroundColor="@color/graybold"
            app:layout_constraintTop_toBottomOf="@id/tilCardNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieCardHDueDate"
                android:textColor="@color/white"
                android:paddingStart="0dp"
                android:maxLength="5"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_card_vencimento"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCVV"
            android:layout_width="130dp"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            app:boxBackgroundColor="@color/graybold"
            app:layout_constraintTop_toBottomOf="@id/tilCardNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieCVV"
                android:textColor="@color/white"
                android:paddingStart="0dp"
                android:maxLength="3"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_card_cvv"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="30dp"
        android:text="@string/title_button_save"
        style="@style/main_button"/>






</androidx.constraintlayout.widget.ConstraintLayout>